# chip8-rs

./: Cargo.toml  font.rom
src/: eval.rs  lib.rs  main.rs  parser.rs  types.rs
