[package]
name = "chip8"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.0"
enum-map = "0.6.0"
derive_more = "0.15.0"
bcd = "0.1.0"
rand = "0.7.0"